week-04/survey-form/style.css
:root {
  background-color: rebeccapurple;
}

body {
  font-family: sans-serif;
  font-size: 1rem;
  color: #f3f3f3;
  line-height: 1.4;
  margin: 0;
}

.container {
  width: 100%;
  margin: 3.125rem ayto 0 auto;
}

header {
  text-align: center;
}

h1 {
  font-weight: 400;
  line-height: 1.2;
}

p {
  font-size: 1.125rem;
}

h1,
p {
  margin-top: 0;
  margin-bottom: 0.5rem;
}

#description {
  font-style: italic;
}

label {
  display: flex;
  align-items: center;
  font-size: 1.125rem;
  margin-bottom: 0.5rem;
}

form {
  background: var(--color-darkblue-alpha);
  padding: 2.5rem 0.625rem;
  border-radius: 0.25rem;
}

#survey-form {
  background-color: #1b1b32;
  color: #f3f3f3;
  padding: 2.5rem;
}

.form-group {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  margin: 0 auto 1.25rem auto;
  padding: 0.25rem;
}

.form-control {
  display: block;
  width: 100%;
  height: 2.375rem;
  padding: 0.375rem 0.75rem;
  border-radius: 0.25rem;
}

.form-control:focus {
  border-color: #80bdff;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.input-radio,
.input-checkbox {
  display: inline-block;
  margin-right: 0.625rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.input-textarea {
  min-height: 120px;
  width: 100%;
  padding: 0.625rem;
  resize: vertical;
}

.clue {
  margin-left: 0.25rem;
  font-size: 0.9rem;
  color: #e4e4e4;
}

input,
button,
select,
textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

button {
  border: none;
}

.submit-button {
  display: block;
  width: 100%;
  padding: 0.75rem;
  background: #37af65;
  color: inherit;
  border-radius: 2px;
  cursor: pointer;
}

